Bindings/Odin/Panshilar/Panshilar.odin


// #######################################################################################
// Console
// #######################################################################################

@(link_prefix="PNSLR_")
foreign {
    /**
     * Print a message to the standard output stream.
     */
	PrintToStdOut :: proc "c" (
		message: string,
	) -> i32 ---
}

// #######################################################################################
// Process
// #######################################################################################

@(link_prefix="PNSLR_")
foreign {
    /**
     * Exits the current process immediately with the specified exit code.
     */
	ExitProcess :: proc "c" (
		exitCode: i32,
	) ---
}

// #######################################################################################
// Network
// #######################################################################################

/**
 * Represents an IP address in binary form.
 * For IPv4, it's 4 bytes. For IPv6, it's 16 bytes.
 */
IPAddress :: []u8

/**
 * Represents a subnet mask in binary form.
 * For IPv4, it's 4 bytes. For IPv6, it's 16 bytes.
 */
IPMask :: []u8

/**
 * Represents an IP network, consisting of an IP address and a subnet mask.
 */
IPNetwork :: struct  {
	address: IPAddress,
	mask: IPMask,
}

// declare []IPNetwork

@(link_prefix="PNSLR_")
foreign {
	GetInterfaceIPAddresses :: proc "c" (
		networks: ^[]IPNetwork,
		allocator: Allocator,
	) -> b8 ---
}

#assert(size_of(int)  == 8, " int must be 8 bytes")
#assert(size_of(uint) == 8, "uint must be 8 bytes")

GET_LOC :: proc(loc := #caller_location) -> SourceCodeLocation {return {file = loc.file_path, line = loc.line, column = loc.column, function = loc.procedure}}

New :: proc($T: typeid, allocator: Allocator, loc: SourceCodeLocation, err: ^AllocatorError) -> ^T {return (^T)(Allocate(allocator, true, size_of(T), align_of(T), loc, err))}

Delete :: proc(obj: ^$T, allocator: Allocator, loc: SourceCodeLocation, err: ^AllocatorError) {if obj != nil {Free(allocator, obj, loc, err)}}

MakeSlice :: proc($T: typeid/[]$E, count: i64, zeroed: b8, allocator: Allocator, loc: SourceCodeLocation, err: ^AllocatorError) -> T {return transmute(T)MakeRawSlice(size_of(E), align_of(E), count, zeroed, allocator, loc, err)}

FreeSlice :: proc(slice: ^[]$T, allocator: Allocator, loc: SourceCodeLocation, err: ^AllocatorError) {if slice != nil {FreeRawSlice(transmute(^RawArraySlice) slice, allocator, loc, err)}}

ResizeSlice :: proc(slice: ^[]$T, newCount: i64, zeroed: b8, allocator: Allocator, loc: SourceCodeLocation, err: ^AllocatorError) {if slice != nil {ResizeRawSlice(transmute(^RawArraySlice) slice, size_of(T), align_of(T), newCount, zeroed, allocator, loc, err)}}
